@startuml
interface QuizFactory
{
+create(reading: Reading, difficulty: DifficultyLevel, language: Language, numOfQuestions: Integer): QuizInterface
}

class MultipleChoiceQuizFactory
{
+create(reading: Reading, difficulty: DifficultyLevel, language: Language, numOfQuestions: Integer): QuizInterface
}

interface QuizInterface
{
+getScore(): Integer
+display(): QuizDisplay
+update(question: Integer, answer: Integer): void
+submit(): void
}

enum DifficultyLevel
{
BEGINNER
INTERMEDIATE
ADVANCED

DifficultyLevel(name: String, minReadRange: Integer, maxReadRange: Integer)
}

enum Language
{
ENGLISH
FRENCH
SPANISH
GERMAN

Language(name: String, code: String, syllableCalculator: SyllableCalculator)
}


QuizFactory <|.. MultipleChoiceQuizFactory
QuizInterface <.. QuizFactory: <<creates>>
DifficultyLevel <.. QuizFactory: <<uses as param>>
Language <.. QuizFactory: <<uses as param>>
@enduml